syntax = "proto3";


//option go_package = "path;name";
//path 表示生成的go文件的存放地址，会自动生成目录的。
//name 表示生成的go文件所属的包名
option go_package="./;proto";
// 定义包名
package proto;

service MessageService {
    rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
    rpc ReceiveMessage (ReceiveMessageRequest) returns (ReceiveMessageResponse);
}

message SendMessageRequest {
    string content = 1;
}

message SendMessageResponse {
    string status = 1;
}

message ReceiveMessageRequest {
    string id = 1;
}

message ReceiveMessageResponse {
    string content = 1;
}
