package server

import (
	"app-gateway/src/proto"
	"context"
)

type MessageServer struct{}

func (s *MessageServer) SendMessage(ctx context.Context, req *proto.SendMessageRequest) (*proto.SendMessageResponse, error) {
	// 在这里实现消息发送逻辑
	return &proto.SendMessageResponse{Status: "Success"}, nil
}

func (s *MessageServer) ReceiveMessage(ctx context.Context, req *proto.ReceiveMessageRequest) (*proto.ReceiveMessageResponse, error) {
	// 在这里实现消息接收逻辑
	return &proto.ReceiveMessageResponse{Content: "Hello, gRPC!"}, nil
}
